2010-02-26  Andy Buckley  <andy@insectnation.org>

	* Update WFinder to not place cuts and other restrictions on the
	neutrino.

2010-02-11  Andy Buckley  <andy@insectnation.org>

	* Change analysis loader behaviour to use ONLY RIVET_ANALYSIS_PATH
	locations if set, otherwise use ONLY the standard Rivet analysis
	install path. Should only impact users of personal plugin
	analyses, who should now explicitly set RIVET_ANALYSIS_PATH to
	load their analysis... and who can now create personal versions of
	standard analyses without getting an error message about duplicate
	loading.

2010-01-15  Andy Buckley  <andy@insectnation.org>

	* Add tests for "stable" heavy flavour hadrons in jets (rather
	than just testing for c/b hadrons in the ancestor lists of stable
	jet constituents)

2009-12-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New option "RatioPlotMode=deviation" in make-plots.

2009-12-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New option "MainPlot" in make-plots. For people who only want
	the ratio plot and nothing else.

	* New option "ConnectGaps" in make-plots. Set to 1 if you
	want to connect gaps in histograms with a line when ErrorBars=0.
	Works both in PLOT and in HISTOGRAM sections.

	* Eliminated global variables for coordinates in make-plots and
	enabled multithreading.

2009-12-14  Andy Buckley  <andy@insectnation.org>

	* AnalysisHandler::execute now calls AnalysisHandler::init(event)
	if it has not yet been initialised.

	* Adding more beam configuration features to Beam and
	AnalysisHandler: the setRunBeams(...) methods on the latter now
	allows a beam configuration for the run to be specified without
	using the Run class.

2009-12-11  Andy Buckley  <andy@insectnation.org>

	* Removing use of PVertex from few remaining analyses. Still used
	by SVertex, which is itself hardly used and could maybe be
	removed...

2009-12-10  Andy Buckley  <andy@insectnation.org>

	* Updating JADE_OPAL to do the histo booking in init(), since